src/test/ui/compile-fail-migration/deriving-primitive.stderr
error: cannot find derive macro `FromPrimitive` in this scope
  --> $DIR/deriving-primitive.rs:11:10
   |
LL | #[derive(FromPrimitive)] //~ ERROR cannot find derive macro `FromPrimitive` in this scope
   |          ^^^^^^^^^^^^^

error: aborting due to previous error

